objects/nFORCE__Translation__c.object
<CustomObject>
    <description>This object stores translations for a field on a record in a single language.</description>
    <fields>
        <fullName>nFORCE__Feature_Translation__c</fullName>
        <description>This required external id field is a soft lookup to the Feature Translation.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field should contain the name of the Feature Translation custom metadata type that it is related to.</inlineHelpText>
        <label>Translatable Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Language__c</fullName>
        <description>This required field references the language of the translated text.</description>
        <inlineHelpText>Set this to the language that the translated value is in. The format should be ISO 639-1 for the language followed by a dash followed by the ISO Alpha-2 country code. Example: (en-US).</inlineHelpText>
        <label>Language</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Original_Text__c</fullName>
        <description>This optional text field contains the field&apos;s value in the original language.</description>
        <inlineHelpText>This optional text field contains the field&apos;s value in the original language.</inlineHelpText>
        <label>Original Text</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Translated_Text__c</fullName>
        <description>This optional text field contains the field&apos;s value in the translated language.</description>
        <inlineHelpText>This optional text field contains the field&apos;s value in the translated language.</inlineHelpText>
        <label>Translated Text</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Translation_Key__c</fullName>
        <description>This field is automatically populated via Apex with a hash to easily match Translation records to the SObject records that the Translation relates to.</description>
        <externalId>true</externalId>
        <label>Translation Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Translation</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Translation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>